--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 </head>
 
 <body class="home page students">
-  <!-- Begin Main Wrapper --> 
+  <!-- Begin Main Wrapper -->    
+  <!--anything -->
   <div class="main-wrapper">
-    <!-- Begin Header -->
+    <!-- Begin Header --> 
     <div class="header-wrapper">
       <div class="header">
         <div class="header-left">
